--- a/hello.html
+++ b/hello.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Hello</title>
-    <style>
-        h1 {
-            color: blue;
-        }
-    </style>
 </head>
+
 <body>
     <h1>Welcome to my website!</h1>
     <h2>Hello</h2>
     Hello, world!
 </body>
+
 </html>
